--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
   "dependencies": {
+    "connect-flash": "^0.1.1",
     "express": "^4.19.2",
     "express-handlebars": "^7.1.3",
+    "express-session": "^1.18.0",
     "mongoose": "^8.4.4"
   }
 }
